--- a/src/index.css
+++ b/src/index.css
@@ -136,11 +136,18 @@
 .logo-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 16px;
+  gap: 16px 0px;
+
   max-width: 1352px;
   margin: 0 auto;
   justify-items: center;
   align-items: center;
+}
+
+@media (min-width: 390px) {
+  .logo-section {
+    gap: 16px;
+  }
 }
 
 @media (min-width: 1180px) {
