Feature of footer

--- a/src/index.css
+++ b/src/index.css
@@ -140,14 +140,15 @@
 }
 
 .nosotros-bg {
-  background-image: url("./assets/about_us.png");
+
+  background-image: linear-gradient(
+      87.91deg,
+      #161c2d -39.09%,
+      rgba(22, 28, 45, 0) 97.71%
+    ),
+    url("./assets/about_us.png");
   background-position: center;
   background-size: cover;
-  background: linear-gradient(
-    87.91deg,
-    #161c2d -39.09%,
-    rgba(22, 28, 45, 0) 97.71%
-  );
 }
 
 @media (min-width: 390px) {
