--- a/src/index.css
+++ b/src/index.css
@@ -140,7 +140,6 @@
 }
 
 .nosotros-bg {
-
   background-image: linear-gradient(
       87.91deg,
       #161c2d -39.09%,
@@ -151,12 +150,30 @@
   background-size: cover;
 }
 
+.equipment-bg {
+  background-image: linear-gradient(
+      87.91deg,
+      #161c2d -39.09%,
+      rgba(22, 28, 45, 0) 97.71%
+    ),
+    url("./assets/equipment-bg.png");
+  background-position: left -90px;
+  background-size: cover;
+  background-size: 200%;
+}
+
 @media (min-width: 390px) {
   .logo-section {
     gap: 16px;
   }
 }
 
+@media (min-width: 450px) {
+  .equipment-bg {
+    background-position: left 70%;
+    background-size: 120%;
+  }
+}
 @media (min-width: 1180px) {
   .logo-section {
     width: 1100px;
@@ -166,6 +183,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+  }
+  .equipment-bg {
+    background-position: left 70%;
+    background-size: 120%;
   }
 }
 
