--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,15 @@
   background-size: 200%;
 }
 
+.eqbg-1 {
+  background-image: url("./assets/eq-1.png");
+  height: 200px;
+  width: 100%;
+  background-position: center;
+  background-size: contain;
+  max-width: 435px;
+}
+
 @media (min-width: 390px) {
   .logo-section {
     gap: 16px;
