--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #161c2d;
+  overflow-x: hidden !important;
 }
 
 html {
