--- a/src/index.css
+++ b/src/index.css
@@ -267,26 +267,9 @@
   min-height: 55px;
 }
 
-.contact-row {
-  display: flex;
-  justify-content: space-between;
-}
-
-.contact-row .form-field {
-  width: 275px; /* For desktop, email and phone each take 275px */
-}
-
 .submit-button {
-  width: 150px;
-  height: 45px;
-  background-color: #021e5f;
-  color: white;
-  font-size: 16px;
-  font-weight: bold;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  align-self: flex-end;
+  /* cursor: pointer; */
+  /* align-self: flex-end; */
 }
 
 .submit-button:hover {
@@ -294,19 +277,19 @@
 }
 
 /* Media Query for Mobile Layout */
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
   .contact-row {
     flex-direction: column;
   }
 
   .contact-row .form-field {
-    width: 100%; /* Full width for mobile */
+    width: 100%;
   }
 
   .form-field {
-    width: 100%; /* Full width for all fields on mobile */
+    width: 100%; 
   }
-}
+} */
 
 @media (min-width: 390px) {
   .logo-section {
