--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,14 @@
   background-size: 200%;
 }
 
+.equ-fisc {
+  background-image: url("./assets/equipment-fiscalia.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 110px;
+  background-position: top;
+}
+
 /* FAQ.css */
 
 .faq-page {
