--- a/src/App.css
+++ b/src/App.css
@@ -263,12 +263,12 @@ p {
 .lines-hero {
   margin-top: -200px;
 }
-
+/* 
 @media (max-width: 838px) {
   .lines-hero {
     margin-top: -140px;
   }
-}
+} */
 @media (max-width: 767px) {
   .myH1 {
     /* H1 Mobile */
@@ -287,6 +287,6 @@ p {
     font-size: 18px;
   }
   .lines-hero {
-    margin-top: -30px;
+    margin-top: -50px;
   }
 }
