--- a/src/index.css
+++ b/src/index.css
@@ -308,6 +308,30 @@
   transform: translate(-50%, -50%);
 }
 
+.reveal-text {
+  display: block;
+  overflow: hidden;
+}
+
+.reveal-text span {
+  display: block;
+  animation: reveal 2s cubic-bezier(0.77, 0, 0.175, 1) 0s;
+  z-index: 100;
+}
+
+.reveal-text bg {
+  /* display: block; */
+  animation: reveal 2s cubic-bezier(0.77, 0, 0.175, 1) 0s;
+}
+@keyframes reveal {
+  0% {
+    transform: translate(0, 150%);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
 @media (min-width: 390px) {
   .logo-section {
     gap: 16px;
