--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,10 @@
 .box {
   display: flex;
   flex-direction: column;
-  padding: 16px;
+  padding: 24px;
   background: #ffffff;
-  border-radius: 8px;
-  height: 272px;
+  border-radius: 24px;
+  height: 286px;
 }
 
 .icon {
@@ -41,6 +41,20 @@
   .box-grid {
     grid-template-columns: repeat(4, 1fr);
   }
+}
+
+.carousel-box-desk {
+  width: 274px !important;
+  height: 151px !important;
+  background-color: #f4f7fa;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 16px;
+  box-sizing: border-box;
+  transition: margin 0.3s ease;
+  /* margin: 0 0 8px 0; */
 }
 
 .carousel-box {
@@ -173,12 +187,6 @@
 }
 
 /* FAQ.css */
-
-.faq-page {
-  /* max-width: 1360px; */
-  /* margin: 0 auto; */
-  /* padding: 60px; */
-}
 
 .faq-item {
   border: 1px solid #ddd;
@@ -320,7 +328,6 @@
 }
 
 .reveal-text bg {
-  /* display: block; */
   animation: reveal 2s cubic-bezier(0.77, 0, 0.175, 1) 0s;
 }
 @keyframes reveal {
