--- a/src/index.css
+++ b/src/index.css
@@ -195,14 +195,14 @@
   max-width: 1192px;
   height: 408px;
 }
-
+/* 
 .equ-fisc {
   background-image: url("./assets/equipment-fiscalia.jpg");
   background-position: center;
   background-size: cover;
   height: 110px;
   background-position: top;
-}
+} */
 
 /* FAQ.css */
 
