--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,24 @@
 .nav-open {
   background-color: #161c2d;
 }
+.mobile-menu {
+  position: fixed; /* Fixed to the viewport */
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: #2c3242;
+  background-image: url("./assets/invvector.svg");
+  background-position: -75% 50%;
+  background-repeat: no-repeat;
+  transform: translateX(100%); /* Initially off-screen to the right */
+  transition: transform 0.4s ease-in-out; /* Smooth slide transition */
+  z-index: 9999;
+}
+
+.mobile-menu.open {
+  transform: translateX(0); /* Slide-in to view */
+}
 
 .logo-section {
   display: grid;
@@ -288,6 +306,7 @@
   border: none;
   border-bottom: 1px solid #8d9098;
   margin-bottom: 20px;
+  border-radius: 0px;
   padding: 10px;
   font-size: 16px;
   box-sizing: border-box;
