--- a/src/App.css
+++ b/src/App.css
@@ -169,7 +169,9 @@ p {
   overflow: hidden;
   height: 100vh;
 }
-
+.links:hover {
+  color: #161c2d;
+}
 .active-link-class {
   color: #161c2d;
 }
