--- a/src/App.css
+++ b/src/App.css
@@ -169,9 +169,35 @@ p {
   overflow: hidden;
   height: 100vh;
 }
+.links {
+  position: relative;
+  text-decoration: none; /* Elimina el subrayado predeterminado */
+}
+
 .links:hover {
   color: #161c2d;
+  transition: 0.5s ease; /* Transición suave */
 }
+
+.links::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px; /* Ajusta el grosor de la línea */
+  background-color: #161c2d; /* Color de la línea al hacer hover */
+  transform: scaleX(0); /* Inicia con la línea invisible */
+  transform-origin: left; /* Cambia el origen de la transformación a la izquierda */
+  transition: transform 0.5s ease; /* Transición suave */
+}
+
+.links:hover::after {
+  transform: scaleX(1); /* Muestra la línea al hacer hover */
+
+  margin-bottom: -3px;
+}
+
 .active-link-class {
   color: #161c2d;
 }
