--- a/src/index.css
+++ b/src/index.css
@@ -352,7 +352,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
+/* 
 .reveal-text {
   display: block;
   overflow: hidden;
@@ -373,6 +373,85 @@
   }
   100% {
     transform: translate(0, 0);
+  }
+} */
+
+.reveal-text {
+  display: block;
+  overflow: hidden;
+}
+
+.reveal-text span {
+  display: block;
+  /* animation: reveal 2s cubic-bezier(0.77, 0, 0.175, 1) 0s; */
+  animation: reveal 2s cubic-bezier(0.77, 0, 0.175, 1) backwards;
+  z-index: 100;
+}
+
+.reveal-text.h1-reveal span,
+.reveal-text.p-reveal span {
+  animation-delay: 0s;
+}
+
+.reveal-text.link-reveal span {
+  animation-delay: 0.2s;
+}
+
+.reveal-text.image-reveal span {
+  animation-delay: 0.4s;
+}
+
+.reveal-text.lines-reveal span {
+  animation-delay: 0.6s;
+}
+
+@keyframes reveal {
+  0% {
+    transform: translate(0, 150%);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeIn 0.6s forwards;
+}
+
+.fade-in-box-1 {
+  animation-delay: 0.8s;
+}
+
+.fade-in-box-2 {
+  animation-delay: 1s;
+}
+
+.fade-in-box-3 {
+  animation-delay: 1.2s;
+}
+
+.fade-in-box-4 {
+  animation-delay: 1.4s;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.box {
+  transform: translateY(20px);
+  animation: fadeInBox 2s forwards;
+}
+
+@keyframes fadeInBox {
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
